[gd_scene load_steps=4 format=3 uid="uid://cqmo22t88tgm1"]

[ext_resource type="Script" uid="uid://dokj0nm3sse3e" path="res://scenes/openworld/taverna.gd" id="1_4tbmh"]
[ext_resource type="Texture2D" uid="uid://d1ehuekqhbl1k" path="res://art/taverna.png" id="1_ob31c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxm4i"]
size = Vector2(140, 79)

[node name="taverna" type="Node2D"]
script = ExtResource("1_4tbmh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ob31c")

[node name="CharacterBody2D" type="CharacterBody2D" parent="Sprite2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/CharacterBody2D"]
polygon = PackedVector2Array(84, 110, -253, 112, -251, -27, 264, -27, 264, 92, 244, 92, 245, 24, 82, 24)

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 120.0
offset_top = -35.0
offset_right = 214.0
offset_bottom = 10.0
text = "Save Game"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(165, 59)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_vxm4i")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
